New Print dialog with CUPS: pages-per-sheet doubled up with system dialog
Categories
(Core :: Printing: Setup, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox110 | --- | fixed |
People
(Reporter: sexxxenator, Assigned: jwatt)
References
Details
Attachments
(1 file, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:97.0) Gecko/20100101 Firefox/97.0
Steps to reproduce:
Context: I have a "Sharp MX M266Nv" printer, configured with CUPS, using driver for "SharpMX-M264Nv PS 1.0"
- I opened the following two scientific papers in FF (PDF.js)
https://proceedings.neurips.cc/paper/2020/file/28538c394c36e4d5ea8ff5ad60562a93-Paper.pdf
https://arxiv.org/pdf/2110.03209.pdf - I attempted to print the first using the "New" FF dialog configured to use "two sided printing: long-edge" + "Pages per sheet: 2"
- I started to configure identically the "New" FF dialog for the second one, then switched to "Print with System Dialog" and configured same options
Actual results:
- First paper got printed single-sided
I already experienced that multiple times, that's why I decided to switch dialog for the second paper: two sided printing works with system printing but not with FF's dialog - Second paper got printed 4 pages/pages and 2 sided.
It seems that both configurations were taken into account!
Expected results:
- Using "New" FF's printing dialog should be able to print 2 sided when system dialog is
- When switching from FF dialog to system dialog, already configured options should be transfered and then only configuration present in System dialog be taken into account. A combination of the options from both dialog should never occur.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Printing: Setup' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 2•3 years ago
|
||
I suspect this is because we perform our own pages-per-sheet transformations in platform code, but only ever rely on the system printing code to do simplex/duplex. That probably means that both Firefox and the print backend did the pages-per-sheet transformation, effectively doubling it. I will look at ignoring our own pages-per-sheet setting when using the system dialog.
Updated•3 years ago
|
![]() |
Assignee | |
Updated•3 years ago
|
![]() |
Assignee | |
Updated•2 years ago
|
Comment hidden (obsolete) |
Comment 4•2 years ago
|
||
Ugh, gotta love it when the documentation and the APIs don't match.... congratulations on tracking things down here.
Does this also affect the issue of whether duplex gets applied properly from the new dialog? (First "actual results" indicated it didn't work.)
![]() |
Assignee | |
Comment 5•2 years ago
|
||
Thanks! Regarding duplex, I am fixing that in a separate patch.
Comment 6•2 years ago
|
||
Comment on attachment 9307506 [details]
Bug 1755974 - Prevent pages-per-sheet on macOS being double applied by system print dialog. r=alaskanemily
Revision D164317 was moved to bug 1805477. Setting attachment 9307506 [details] to obsolete.
![]() |
Assignee | |
Comment 7•2 years ago
|
||
![]() |
Assignee | |
Comment 8•2 years ago
|
||
(In reply to Jonathan Watt [:jwatt] from comment #5)
Regarding duplex, I am fixing that in a separate patch.
I filed bug 1805429 for the duplex issue.
Comment 10•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Comment 11•8 months ago
|
||
I'm not entirely sure this was actually fixed (and it actually got slightly-worse with the changes in bug 1805716 that landed in the Nightly immediately after this one).
See bug 1919414 for more details...
Comment 12•8 months ago
|
||
(more details in bug 1919414 comment 3 in particular)
Description
•