Bug 1755974 - Fix Linux system print dialog to take the pages-per-sheet from print preview. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D164621